--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ button {
 	font-size: 1.5em;
 	font-variant: small-caps;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	border-style: outset;
+	border-color: black;
 }
 
 /* Zebra Icon */
