--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,18 @@ button {
 	background-color: rgb(0, 0, 128);
 	color: white;
 	padding-bottom: 60px;
+	font-size:1.2em;
 }
 
 /* Change the link color in the sidebar, given its darker color. */
 .side a {
 	color: #00FFFF;
+}
+
+.side h3 {
+	font-variant:small-caps; 
+	font-size:1.5em; 
+	text-shadow:3px 3px 5px black;
 }
 
 /* Alter the properties of the headers in the sidebar. */
@@ -147,6 +154,19 @@ button {
 	height:auto; 
 	box-shadow: 5px 5px 10px 10px rgba(255,255,255,0.2); 
 	border: 1px solid #000000;
+}
+
+.bio {
+	font-size: 1.2em;
+	line-height: 1.3;
+}
+
+
+
+.bioImage {
+	min-width: 100px;
+	width:100%;
+	height:auto;
 }
 
 /* Setting up the resume table */
