--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ button {
 	left: 0;
 	width: 100%;
 	height: 160px;
-	z-index: 3;
+	z-index: 2;
 }
 
 /* Increase the boldness of the title text */
@@ -61,7 +61,7 @@ button {
 	position: fixed;
 	top: 220px;
 	left: 0px;
-	z-index: 3;
+	z-index: 2;
 }
 
 /* Style for individual links */
@@ -135,7 +135,7 @@ button {
 }
 
 /* Footer */
-.footer {
+#footer {
 	padding: 1px;
 	text-align: center;
 	font-size: 0.8em;
@@ -145,6 +145,7 @@ button {
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
+	display: inherited;
 }
 
 /* linkImage is the image that links to different social platforms */
@@ -163,11 +164,7 @@ button {
 
 
 
-.bioImage {
-	min-width: 100px;
-	width:100%;
-	height:auto;
-}
+
 
 /* Setting up the resume table */
 .resume {
@@ -254,6 +251,12 @@ button {
 		font-variant: small-caps;
 		font-size: 2em;
 	}
+	
+	.bioImage {
+	    min-width: 100px;
+	    width:100px;
+	    height:auto;
+    }
 	
 	.cvImage {
 		display: none;
