--- a/jessica.css
+++ b/jessica.css
@@ -8,7 +8,7 @@ body {
 	text-align: center;
 	background-color: rgb(90, 40, 40);
 	background-image: url(zebra2.png), url(zebra.png);
-	background-position: 2%, 98%;
+	background-position: 10%, 90%;
 	background-repeat: no-repeat, no-repeat;
 	background-size: auto 80%, auto 80%;
 	color: white;
@@ -49,6 +49,12 @@ body {
 	margin-left: 10px;
 }
 
+#sidebar p:hover {
+	cursor: pointer;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 #sidebar a {
 	color: rgb(255, 200, 200);
 }
@@ -61,6 +67,7 @@ body {
 #mainSection h2 {
 	margin-left: 10px;
 	font-size: 2.4em;
+	text-shadow: 3px 3px 5px gray;
 }
 
 #mainSection p {
@@ -76,8 +83,18 @@ body {
     float: right;
 	padding-top: 10px;
 	padding-right: 10px;
-	width: auto;
-	height: 70%;
+	width: 25%;
+	height: auto;
+	display: inline;
+}
+
+#lily2 {
+    float: right;
+	padding-top: 10px;
+	padding-right: 10px;
+	width: 25%;
+	height: auto;
+    display: none;
 }
 
 #footer {
@@ -98,4 +115,28 @@ body {
 	margin-top: 15px;
 }
 
-
+/* Adapt the layout at a screen width of 900 pixels */
+@media (max-width: 800px) {
+    #pageHeader {
+		height: 80px;
+		padding: 0px 0px 0px 0px;
+		background-position: 5%, 95%;
+	}
+	#pageHeader h1 {
+		margin-top: 10px;
+		font-size: 3em;
+	}
+	#row {
+		flex-direction: column;
+		font-size: 0.8em;
+		margin-top: 70px;
+	}
+	
+	#lily {
+		display: none;
+	}
+	
+	#lily2 {
+        display: inline;
+    }
+}
