--- a/styles.css
+++ b/styles.css
@@ -102,14 +102,14 @@ button {
 
 #side h3 {
 	font-variant:small-caps; 
-	font-size:1.5em; 
+	font-size:1.3em; 
 	text-shadow:3px 3px 5px black;
 	margin-left: 10px;
 	margin-bottom: 0px;
 }
 
 #side p {
-	font-size: 1.2em;
+	font-size: 1.1em;
 	margin-left: 10px;
 	margin-top: 0px;
 }
@@ -120,7 +120,7 @@ button {
 	padding-bottom: 70px;
 }
 
-#main h2, h3, p {
+#main h2, h3, p, form {
 	margin-left: 10px;
 }
 
@@ -135,12 +135,6 @@ button {
 	padding-top: 10px;
 	padding-right: 10px;
 	width: 25%;
-}
-
-.text img {
-	width: 100%;
-	max-width: 450px;
-	height: auto;
 }
 
 /* Footer */
@@ -172,25 +166,14 @@ button {
 	line-height: 1.3;
 }
 
-
-
-
-
 /* Setting up the resume table */
-
 #myResume table, tr, td {
 	border: 1px solid black;
 	background-color: white;
 	margin-left: 10px;
 }
 
-
-
-.resume {
-	
-}
-
-
+/* Setting up the CV table */
 .cvHeader {
 	line-height: 2;
 	font-size: 1.2em;
